# clickhelper

./: .gitattributes  .markdownlintignore  README.md  dump_help.md  pyproject.toml  setup.py
clickhelper/: click_options_abbrevs.py  dumphelp_to_file.py
